--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -8,6 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metal Icons</title>
+    <meta name="description" content="Strong, simple icons—ready for your next project.">
   </head>
   <body>
     <div id="root"></div>
