--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metal Icons</title>
-    <meta name="description" content="Strong, simple icons—ready for your next project.">
+    <meta name="description" content="A clean, reliable icon set built for modern projects.">
   </head>
   <body>
     <div id="root"></div>
