--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metal Icons</title>
     <meta name="description" content="A clean, reliable icon set built for modern projects.">
+    <meta property="og:image" content="https://www.metal-icons.com/images/og.jpg" />
   </head>
   <body>
     <div id="root"></div>
