feat: Enhance SEO with comprehensive Open Graph and Twitter meta tags for improved social sharing

--- a/packages/website/index.html
+++ b/packages/website/index.html
@@ -9,7 +9,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Metal Icons</title>
     <meta name="description" content="A clean, reliable icon set built for modern projects.">
-    <meta property="og:image" content="https://www.metal-icons.com/images/og.jpg" />
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://www.metal-icons.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Metal Icons">
+    <meta property="og:description" content="A clean, reliable icon set built for modern projects.">
+    <meta property="og:image" content="https://www.metal-icons.com/images/og.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="metal-icons.com">
+    <meta property="twitter:url" content="https://www.metal-icons.com/">
+    <meta name="twitter:title" content="Metal Icons">
+    <meta name="twitter:description" content="A clean, reliable icon set built for modern projects.">
+    <meta name="twitter:image" content="https://www.metal-icons.com/images/og.jpg">
   </head>
   <body>
     <div id="root"></div>
